Text block and write strings